# postmind

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PRIVACY.md  README.md  SECURITY.md  THREAT_MODEL.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: agent-harness-plan.md  autodraft-plan.md  chat-assistant-plan.md  cleanup-ideas-backlog.md  imap-local-drafts-plan.md  learning-system-plan.md  local-harness-sqlite-eval.md  mcp-setup.md  run-sql-tool-plan.md  smart-cleanup-batches-plan.md  smart-first-run-plan.md  super-agent-plan.md  super-agent-v2-plan.md  ui-enterprise-redesign-plan.md  user-guide.md
docs/superpowers/plans/: 2026-06-03-agent-action-panel.md  (+2 more)
mailtrim/: config.py
mailtrim/cli/: main.py
mailtrim/core/: account_registry.py  ai_engine.py  daemon.py  diagnostics.py  errors.py  gmail_client.py  sender_stats.py  storage.py
mailtrim/web/: __init__.py  server.py
postmind/: __init__.py  config.py
postmind/cli/: main.py
postmind/core/: account_registry.py  agent_mcp.py  agent_service.py  agent_tools.py  ai_engine.py  autodraft.py  avoidance.py  bulk_engine.py  daemon.py  daily_brief.py  diagnostics.py  errors.py  follow_up.py  gmail_client.py  llm.py  mcp_client.py  mock_ai.py  sender_stats.py  storage.py  unsubscribe.py  usage_stats.py  validation.py
postmind/web/: __init__.py  server.py
tests/: conftest.py  test_agent_action_panel.py  test_agent_chaining.py  test_agent_history.py  test_agent_service.py  test_agent_service_trash_query.py  test_agent_tools_new.py  test_agentservice_summarize.py  test_ai_trust_boundary.py  test_autodraft.py  test_brief_agent.py  test_brief_page.py  test_cleanup_batches.py  test_cleanup_feedback.py  test_cleanup_phase2.py  test_cleanup_web_phase2.py  test_cleanup_web_phase3.py  test_daily_brief_items.py  test_deep_sync.py  test_diagnostics.py  test_executor_delegates_to_service.py  test_extended_thinking.py  test_first_run.py  test_from_cache.py  test_imap_quickstart.py  test_imap_undo.py  test_learning_web.py  test_mcp_guidance.py  test_mcp_templates.py  test_memory_bootstrap.py  test_mock_ai.py  test_newsletter_digest.py  test_onboarding_wizard.py  test_privacy.py  test_provider_resolution.py  test_purge.py  test_quickstart.py  test_setup.py  test_since_filter.py  test_smarter_confidence.py  (+10 more)
(+44 files in other folders)
