[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "postmind"
version = "0.4.2"
description = "Privacy-first email inbox management — Gmail + IMAP, local-first core, optional AI via Anthropic API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "postmind contributors" }]
keywords = [
    "gmail", "email", "inbox", "cleanup", "productivity",
    "cli", "ai", "anthropic", "privacy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Utilities",
]
dependencies = [
    "google-auth>=2.28.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.120.0",
    "anthropic>=0.40.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "python-dateutil>=2.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "apscheduler>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/tekram/postmind"
"Bug Tracker" = "https://github.com/tekram/postmind/issues"
"Source Code" = "https://github.com/tekram/postmind"

[project.optional-dependencies]
# Headless browser support for unsubscribe fallback
headless = ["playwright>=1.44.0"]
# Local web UI: postmind serve
web = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.9",
    "bandit>=1.7.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
postmind = "postmind.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["postmind*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]   # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["postmind"]
omit = ["*/venv/*", "tests/*"]
